packages/compiler/tests/snapshots/signal_resolve__multiple_signals.snap
---
source: tests/signal_resolve.rs
expression: "resolve_signals(\"const [count, setCount] = signal(0)\\nconst [name, setName] = signal(\\\"\\\")\")"
---
SignalMap(
    {
        "count": "setCount",
        "name": "setName",
    },
)
