packages/compiler/tests/snapshots/signal_resolve__name_attr_script_meta.snap
---
source: tests/signal_resolve.rs
expression: "resolve_signals(\"// @name x-counter\\nconst [foo, setFoo] = signal(true)\")"
---
SignalMap(
    {
        "foo": "setFoo",
    },
)
