packages/compiler/tests/snapshots/signal_resolve__non_signal_var_excluded.snap
---
source: tests/signal_resolve.rs
expression: "resolve_signals(\"const x = 1\\nconst y = foo()\")"
---
SignalMap(
    {},
)
