packages/compiler/tests/snapshots/signal_resolve__single_signal.snap
---
source: tests/signal_resolve.rs
expression: "resolve_signals(\"const [count, setCount] = signal(0)\")"
---
SignalMap(
    {
        "count": "setCount",
    },
)
